--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <div class="topbar w3-row" id="topbar"></div>
-    <div class="w3-row">
+    <div class="centerbar w3-row">
         <div class="leftbar w3-col w3-left" id="leftbar"></div>
         <div class="rightbar w3-col w3-right" id="rightbar"></div>
         <div class="content w3-rest" id="content"></div>
     </div>
     <div class="bottombar w3-row" id="bottombar"></div>
+    <script src="api.js"></script>
+    <script src="content.js"></script>
+    <script src="data.js"></script>
+    <script src="analysis.js"></script>
+    <script src="cover.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
