--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="api.js"></script>
     <script src="content.js"></script>
     <script src="data.js"></script>
+    <script src="process.js"></script>
     <script src="analysis.js"></script>
     <script src="cover.js"></script>
     <script src="index.js"></script>
