--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3.css">
     <link rel="icon" type="image/png" href="tako.png" />
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,6 +19,7 @@
     <script src="data.js"></script>
     <script src="process.js"></script>
     <script src="analysis.js"></script>
+    <script src="campaign.js"></script>
     <script src="cover.js"></script>
     <script src="index.js"></script>
 </body>
